zeit.vgwort changes
===================

0.1.1 (unreleased)
------------------

- Cronjob to automatically order new tokens (#7326).


0.1.0 (2010-05-17)
------------------

* first release